# stock-mlops

./: .env.example  .gitignore  CLAUDE.md  README.md  claude.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: daily_predict.py  drift_check.py  weekly_train.py
api/: Dockerfile  dependencies.py  main.py
api/routers/: __init__.py  metrics.py  models.py  predictions.py
configs/: features.yaml  models.yaml  pipeline.yaml
src/: __init__.py
src/common/: __init__.py  config.py  logger.py  timing.py
src/data/: __init__.py  cache.py  collector.py  database.py
src/evaluation/: __init__.py  drift.py  validator.py
src/features/: __init__.py  definitions.py  engineering.py
src/models/: __init__.py  predictor.py  registry.py  trainer.py
src/pipeline/: __init__.py  data_pipeline.py  utils.py
tests/: conftest.py  test_data.py  test_features.py  test_models.py
web/: Dockerfile  next.config.js  package.json
web/app/: layout.tsx  page.tsx
web/app/metrics/: page.tsx
web/app/models/: page.tsx
web/app/predictions/: page.tsx
web/components/: AccuracyChart.tsx  MetricsSummary.tsx  ModelStatus.tsx  Navigation.tsx  PredictionsList.tsx  ScheduleInfo.tsx
web/lib/: api.ts  date.ts
